@@ -1,5 +1,16 @@
 2000-12-05  Michael Snyder  <msnyder@mvstp600e.cygnus.com>
 
+	* gdb.base/constvars.exp: Add a "pass" message if "up" succeeds.
+	* gdb.base/miscexprs.exp: Ditto.
+	* gdb.base/pointers.exp:  Ditto.
+	* gdb.c++/derivation.exp: Ditto.
+	* gdb.c++/local.exp:      Ditto.
+	* gdb.c++/namespace.exp:  Ditto.
+	* gdb.c++/overload.exp:   Ditto.
+	* gdb.c++/ref-types.exp:  Ditto.
+
+2000-12-05  Michael Snyder  <msnyder@mvstp600e.cygnus.com>
+
 	* gdb.base/constvars.exp: Test result of "up" command.
 	* gdb.base/miscexprs.exp: Ditto.
 	* gdb.base/pointers.exp:  Ditto.
